<resources>
    <string name="app_name">TP4_Grupo7</string>
    <string name="Tabs_1">Alta</string>
    <string name="Tabs_2">Modificación</string>
    <string name="Tabs_3">Listado</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_id">ID</string>
    <string name="nombre_producto">NOMBRE PRODUCTO</string>
    <string name="stock">STOCK</string>
    <string name="categoria">CATEGORIA</string>
    <string name="agregar">Agregar</string>
    <string name="buscar">Buscar</string>
    <string name="modificar">Modificar</string>
</resources>